--- a/views/newPasswordUser.ejs
+++ b/views/newPasswordUser.ejs
@@ -11,10 +11,6 @@
         <h1>Create New Password</h1>
     <div class="h-50 w-25 mt-5 p-4 border">
     <form id="passwordForm">
-      <div class="mb-3">
-        <label class="form-label">Enter Phone number</label>
-        <input type="number" class="form-control" id="Phone" aria-describedby="emailHelp">
-        </div>
         <div class="mb-3">
         <label class="form-label">New Password</label>
         <input type="password" class="form-control" id="Password" aria-describedby="emailHelp">
@@ -33,7 +29,6 @@
       event.preventDefault();
       const Password = document.getElementById('Password').value;
       const confirmPassword = document.getElementById('confirmPassword').value;
-      const Phone = document.getElementById('Phone').value;
 
        const data = window.location.href;
         const para = data.split('/');
@@ -52,7 +47,7 @@
           headers: {
             'Content-Type': 'application/json',
           },
-          body: JSON.stringify({ Password, Phone }),
+          body: JSON.stringify({ Password }),
         });
 
         if (response.ok) {
